fix: select z-index (#1139)

--- a/ui/src/design-system/components/select/select.module.scss
+++ b/ui/src/design-system/components/select/select.module.scss
@@ -103,7 +103,7 @@
   background-color: $color-generic-white;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  z-index: 3;
+  z-index: 50;
 }
 
 .selectViewport {
